--- a/Math/sampleproblem/exam/2016-tohku.tex
+++ b/Math/sampleproblem/exam/2016-tohku.tex
@@ -44,6 +44,19 @@
 東北大は標準的な知識がついているかを確認する問題を出題しており、
 その分野の基礎ができているかを確認する時に参考になります。
 
+1番、群論というか数え上げの問題ですね。
+
+(1)
+$N(5,3)$の計算です。位数が3なので、巡回群ですね。
+さて、巡回群ということは$\{ a, a^2 , a^3 \}$と書けるということです。
+なので、位数の議論から3個の元を取り替える写像のみです。
+もし$n$の元がこの写像で入れ替わっている場合、その元でのみ生成される巡回群の位数は$n$の約数となります。
+そのため、位数3の群は元を置き換えるのは三個となります。
+実際に3個をどこに動かすのか写像があるとかといと、1つ元を適当に定義し、それを5×4×3で60通りとなります。
+
+
+(2)
+
 今回は3番、ホモロジーの問題を解説します。
 
 以下解答です。
