--- a/Math/differentialgeometry/manifold.tex
+++ b/Math/differentialgeometry/manifold.tex
@@ -53,8 +53,14 @@
 \section{接続とリーマン計量}
 \label{sec:接続とリーマン計量}
 
+測地線
+
 \section{双対アフィン幾何学}
 \label{sec:双対アフィン幾何学}
+
+\begin{thm}
+ 双対平坦多様体$(M,g,\nabla,\nabla^{*} )$
+\end{thm}
 
 
 \end{document}
