--- a/seminare/EllipticCurve/1206/ProjectiveVariety.tex
+++ b/seminare/EllipticCurve/1206/ProjectiveVariety.tex
@@ -82,5 +82,19 @@
 \section{Projective Morphism}
 \label{sec:Projective Morphism}
 
+\appendix
+\section{sheaf and scheme}
+層，環つき空間，スキームを定義する．
+
+\begin{dfn}
+ $X$を位相空間とする．$\mathcal{F}$が$X$の開集合のなす圏から，
+ アーベル群のなす圏への反変関手となる時，アーベル群の前層という．
+\end{dfn}
+\begin{dfn}
+ 前層$\mathcal{F}$ が以下を満たす時，層という．
+
+
+
+\end{dfn}
 
 \end{document}
