--- a/seminare/Machine_learning/0128/解説.tex
+++ b/seminare/Machine_learning/0128/解説.tex
@@ -338,7 +338,7 @@
 \newcommand{\wtC}{\wt{\cC}}
 
 \title{第3回Math-iine learning~Learning Functions: When Is Deep Better Than Shallow~}
-\author{takegawa}
+\author{}
 \date{1/28}
 
 
@@ -411,6 +411,8 @@ $\mathcal{D}_n$を$S_n$に属する関数の合成で書けるもの全体とす
 となる．$|g_1 - P_1||g_2 - P_2|\le \mathcal{O}(n^{-r})$となるので．$f(g_1,g_2)-P_0(P_1,P_2) =\mathcal{O}(n^{-r/2})$となる．
 これをinductiveに続けていけばよい．
 \end{proof}
+\begin{rem}
 オーダとしてはこれが限界であることが示されている．
+\end{rem}
 
 \end{document}
