--- a/seminare/WeilConjecture/0129/p-adicWeilConj.tex
+++ b/seminare/WeilConjecture/0129/p-adicWeilConj.tex
@@ -352,32 +352,12 @@
 \section{Introduction}
 \label{sec:Introduction}
 
-ヴェイユ予想は20世紀の数論の方向性を決定づけた重要な定理であり，そこで使われた道具は現在の数論の研究においても重要な位置を占める．ヴェイユ予想物語では，そのヴェイユ予想を現代の知識を持って改めて解釈することを目標としている．これまでの講義では，代数の基礎，ヴェイユ予想やその証明のアイディアの元となった，リーマン予想とリフシッツ不動点定理について解説してきた．この講義では，そうした準備を元に，ヴェイユ予想の主張，及び，ヴェイユ予想がリーマン予想の類似であることの説明をする．また，楕円曲線という特別な場合において，実際にヴェイユ予想を証明する．ただし，楕円曲線には優れた解説書が多数存在するため，その証明は本書では特に記載しない．
+ヴェイユ予想は20世紀の数論の方向性を決定づけた重要な定理であり，そこで使われた道具は現在の数論の研究においても重要な位置を占める．ヴェイユ予想物語では，そのヴェイユ予想を現代の知識を持って改めて解釈することを目標としている．これまでの講義では，代数の基礎，ヴェイユ予想やその証明のアイディアの元となった，リーマン予想とリフシッツ不動点定理について解説してきた．この講義では，そうした準備を元に，ヴェイユ予想の主張，及び，ヴェイユ予想がリーマン予想の類似であることの説明をする．また，楕円曲線という特別な場合において，実際にヴェイユ予想を証明する．ただし，楕円曲線には優れた解説書が多数存在するため，楕円曲線の一般論については定理を記載するのみで，その証明は本書では特に記載しない．
 証明が気になる場合は，例えば\cite{s}を参照するとよい．
-本書の概要を述べる．
-まずは代数多様体を述べる．
-
-プロットは，以下の通り．
-
-\begin{itemize}
-  \item 代数多様体(Affineのみ)Projectiveはそれを無限遠点を加えたものととして定義する．及びsmoothの定義
-  \item 代数多様体の射の定義(しないかも)
-  \item ヴェイユ予想の主張
-  \item 合同ゼータ関数とHasse-Weilのζ関数の関係
-  \item リーマン予想との類似
-  \item 楕円曲線の定義
-  \item 楕円曲線の性質
-  \begin{itemize}
-    \item 有理点全体が群になること
-    \item Isogenyと[m]倍写像の　存在
-    \item Frobeniusとdegree
-    \item Tate-Module
-    \item Weil-Pairing
-  \end{itemize}
-  \item Weil-Conjectureの証明
-\end{itemize}
-代数多様体や楕円曲線の一般論については，今回は記述せず，最低限の範囲でコンパクトに止めた資料にする．
-目標は合計15P程度でまとめること．
+最後にヴェイユ予想におけるリフシッツ不動点定理の関係を概要程度に説明し，エタールコホモロジー等の数論幾何の道具を活用するモチベーションを説明した．
+\begin{yodan}
+ もっといい序文をかけないものか．
+\end{yodan}
 
 \section{代数多様体とヴェイユ予想}
 \label{sec:代数多様体とヴェイユ予想}
@@ -442,21 +422,26 @@ $V$の次元を$\mathrm{dim}V$と書く．
    V=\{[t_0:\dots:t_n] \in \mathbb{P}^n(\overline{K}) |   \mbox{任意の}f \in \mathfrak{p} \mbox{に対し，}f(t_0: \dots :t_n)=0\}
   \end{equation*}
 \end{dfn}
-射影代数多様体とアフィン代数多様体には以下の関係がある．
-******************\\
-あとで埋める \\
-******************
+
+射影代数多様体とアフィン代数多様体に無限遠を付け加えたようなものになっている．
+具体的には以下が成り立つ．
+
+\begin{prop}
+$(V,\overline{K}[X_0 ,\dots,X_n]/\mathfrak{p})$を射影代数多様体とする．
+$U_i :=\{[t_0/t_i,\dots,t_{i-1}/t_i,t_{i+1}/t_i,t_n/t_i]\in V | t_i \neq 0\}$とし
+$\mathfrak{p}_i$を任意の$f\in \mathfrak{p}$に対し，$f(X_1,\dots,X_i,1,X_{i+1},X_n)$で生成される$\overline{K}[X_1,\dots,X_n]$のイデアルとする.
+この時，$(U_i,\overline{K}[X_1,\dots,X_n]/\mathfrak{p}_i)$はアフィン代数多様体となる．
+\end{prop}
 \begin{rem}
   特に1次元射影代数多様体は，アフィン代数多様体に1点$O$を追加したものになる．
+  アフィン代数多様体から射影代数多様体を作ることもできる．
 \end{rem}
 
 \subsection{スキーム}
 \label{sub:スキーム}
 代数多様体では代数閉体上の図形しか調べられない．そのため，より一般の図形に拡張できないかは考えられていた．
 その成功例として，スキームがある．スキームは理論が広大であり，なぜこのように考えるとよいかは初学者には理解しづらいかもしれない．ただ．スキームによって数論的な問題を幾何的に解釈できるようになるなど，様々な利点がある．
-
 まず，代数幾何の重要な定理を述べる．
-
 \begin{thm}[ヒルベルトの弱零点定理]
 代数閉体$K$上の代数多様体$(V,K[X_1,\dots,X_n]/\mathfrak{p})$に対し，$\mathrm{Spm}V$を$V$
 の極大イデアル全体のなす集合とする．
@@ -464,7 +449,7 @@ $V \to \mathrm{Spm}V,(t_1,\dots,t_n)\mapsto (\overline{X_1 - t_1},\dots,\overlin
 は全単射となる．
 \end{thm}
 
-上の定理により，代数多様体では，関数$K[X_1,\dots,X_n]/\mathfrak{p}$の情報さえわかれば，$V$の情報はいらないことがわかる．つまり，代数多様体を調べる時は，関数だけを調べればよい．このことを逆手にとり，関数を多項式環から一般の単位的可換環に一般化したものがスキームである.この時，点も極大イデアルではなく素イデアルに一般化する．スキームは環付き空間(空間と空間上の環の層の組)として定義される．空間や空間上の層がどのように定義されるかがわかる命題を証明なく列挙する．
+ヒルベルトの零点定理により，代数多様体では，関数$K[X_1,\dots,X_n]/\mathfrak{p}$の情報さえわかれば，$V$の情報はいらないことがわかる．つまり，代数多様体を調べる時は，関数だけを調べればよい．このことを逆手にとり，関数を多項式環から一般の単位的可換環に一般化したものがスキームである.この時，点も極大イデアルではなく素イデアルに一般化する．スキームは環付き空間(空間と空間上の環の層の組)として定義される．空間や空間上の層がどのように定義されるかがわかる命題を証明なく列挙する．
 
 \begin{prop}
 $R$を可換環とする．$\mathrm{Spec}R$を$R$の素イデアル全体のなす集合とする．
@@ -494,9 +479,30 @@ $D(I):=\mathrm{Spec}R \backslash V(I)$とする．
 \end{rem}
 スキームはアフィンスキームを貼り合わせたものとして定義されるが，本講義ではアフィンスキームのみを扱うので，定義は省略する．
 
+\begin{dfn}[S上のスキーム]
+  スキーム$X$が射$X \to S$の組を$S$上のスキームという．$S=\mathrm{Spec}R$の場合，$R$上のスキーム
+  ともいう．
+\end{dfn}
+
+\begin{dfn}[有理点]
+  $K$を体とする．スキームの射$\mathrm{Spec}K \to X$を$K$-有理点という．
+\end{dfn}
+\begin{prop}
+ 体$K$上のスキーム$X=\mathrm{Spec}K[X_1,\dots,X_n]/\mathfrak{p}$とする．この時，
+ $K$-有理点全体の集合は$V=\{(t_1,\dots,t_n) \in K^n | \mbox{任意の}f \in \mathfrak{p} \mbox{に対し，}f(t_1, \dots t_n)=0  \} $と一致する．
+\end{prop}
+\begin{proof}
+アフィンスキームの圏と可換環の圏の圏同値から，$K$-有理点は$\tilde{g}:K[X_1,\dots,X_n]/\mathfrak{p} \to K$となる準同型と一対一に対応する．この準同型は剰余環の普遍性から$g:K[X_1,\dots,X_n] \to K$への準同型であって，kernelが$\mathfrak{p}$を含むものと一対一に対応する．$g(X_i)=a_i$とすると$\mathrm{Ker}f=(X_1 -a_1, \dots,X_n -a_n)$となる．$(X_1 -a_1, \dots,X_n -a_n) \supset \mathfrak{p}$は
+任意の$f \in  \mathfrak{p}$に対し，$f(a_1,\cdots,a_n)=0$と同値となり，示された．
+\end{proof}
+\begin{rem}
+ 準同型$f,g: K[X_1,\dots,X_n]/\mathfrak{p} \to K$が$f=h \circ g$と書けた場合，$\mathrm{Ker}f = \mathrm{Ker}g$は一致する．そのため,$(X_1 - a_1,\dots,X_n - a_n),(X_1 - b_1,\dots,X_n - b_n) \in K^n$が異なる場合,$X_i \mapsto a_i,$となる準同型$\pi_a$と$X_i \mapsto b_i$となる準同型$\pi_b$に対し，
+ $\pi_b = h \circ \pi_a$となる準同型$h$は存在しない.
+\end{rem}
+
 \subsection{ヴェイユ予想}
 \label{sub:ヴェイユ予想}
-\subsubsection{ゼータ関数とヴェイユ予想}
+\subsubsection{ヴェイユ予想の主張}
 \label{subs:ゼータ関数とヴェイユ予想}
 
 代数多様体のヴェイユ予想を記述する．
@@ -507,8 +513,6 @@ $D(I):=\mathrm{Spec}R \backslash V(I)$とする．
      Z(V/\mathbb{F}_q;T):= \mathrm{exp}\Bigl( \sum_{n=1}^{\infty}(\#V(\mathbb{F}_{q^n}))\frac{T^n}{n} \Bigr)
     \end{equation*}
 \end{dfn}
-
-
 
 \begin{thm}[ヴェイユ予想]
   $V$を有限体$\mathbb{F}_q$上定義された$d$次元のsmoothな射影代数多様体とする．
@@ -587,10 +591,26 @@ $X$を$\mathrm{Spec}\mathbb{F}_q[X_1,\dots,X_n]/\mathfrak{p}$とする.
   \end{equation*}
 \end{prop}
 \begin{proof}
- 計算すればわかる．
-******************\\
-あとで埋める \\
-******************
+  $\#k(x)=q^{m_x}$とする.logをとると,
+  \begin{align*}
+    \sum_{x \in |X|} -\mathrm{log}(1-\#k(x)^s) &=
+    \sum_{x \in |X|}\sum_{n=1}^{\infty} q^{-m_xsn}/n \\
+    & = \sum_{x \in |X|}\sum_{n=1}^{\infty} m_xq^{-m_xsn}/nm_x \\
+    & = \sum_{n=1}^{\infty}\sum_{x\in |X|, m_x|n}m_x \frac{q^{-ns}}{n} \\
+  \end{align*}
+  となる.よって,
+  \begin{equation*}
+   \sum_{x\in |X|, m_x|n}m_x = \#V(\mathbb{F}_{q^n})
+  \end{equation*}
+  を示せばよい.生成元の行き先だけで決まるので，$\mathrm{Hom}(\mathbb{F}_q[X_1,\dots,X_n]/\mathfrak{p},\mathbb{F}_{q^n})
+  \simeq \mathrm{Hom}(\mathbb{F}_{q^n}[X_1,\dots,X_n]/\mathfrak{p}^{ext},\mathbb{F}_{q^n})$
+  となり， $\#V(\mathbb{F}_{q^n})=\#\mathrm{Hom}(\mathbb{F}_{q^n}[X_1,\dots,X_n]/\mathfrak{p}^{ext},\mathbb{F}_{q^n})$となるので，$\mathrm{Hom}(\mathbb{F}_q[X_1,\dots,X_n]/\mathfrak{p},\mathbb{F}_{q^n})$
+  の個数がわかればよい．$x \in |X|$に対し、$m_x=\#Gal(\mathbb{F}_{q^{m_x}}/\mathbb{F}_q)$個の射が
+  kernelが一致する.これより,閉点$x$に対し,射が$m_x$個存在することがわかる．また，射が存在すれば，そのkernelに一致する閉点が存在する.よって，
+  \begin{equation*}
+   \sum_{x\in |X|, m_x|n}m_x = \#V(\mathbb{F}_{q^n})
+  \end{equation*}
+  となる．
 \end{proof}
 ヴェイユ予想の等式(1)(2)の意味は上を通して理解される．
 Hasse-Weilのゼータ関数でみると，(1)は
@@ -610,14 +630,6 @@ $P_i(q^{-s})=0$を満たす．これより．$|\alpha_{ij}|=q^{i/2}$となる複
 上の式は$s$の実部が$i/2$という主張をしている．そのため，リーマン予想の類似と考えられている．
 
 
-\subsection{Trace Fomulaとヴェイユ予想}
-\label{sub:Trace Fomulaとヴェイユ予想}
-
-余力があれば，コホモロジーについても記載する．
-******************
- あとで埋める
-******************
-
 \section{楕円曲線の性質}
 \label{sec:楕円曲線の性質}
 この章では，楕円曲線を定義して，基本的な性質を述べる．この章では事実を列挙するだけで，基本的に証明は述べない．それは結果を使うだけで楕円曲線のヴェイユ予想が示せるのと，
@@ -628,7 +640,7 @@ $P_i(q^{-s})=0$を満たす．これより．$|\alpha_{ij}|=q^{i/2}$となる複
 \label{sub:楕円曲線の定義}
 
 \begin{dfn}[楕円曲線]
-  $K$上定義された射影代数多様体$V$が楕円曲線であるとはある既約な二変数多項式$Y^2 - X^3 - aX - b$が存在し，以下が成り立つことである．
+  $K$上定義された射影代数多様体$V$が楕円曲線であるとは$4a^3+27b^2\neq0$となる，二変数多項式$Y^2 - X^3 - aX - b$が存在し，以下が成り立つことである．
   \begin{equation*}
    V=\{O \} \cup \{ (x,y) \in \overline{K}^2 | y^2 - x^3 - ax - b=0 \}
   \end{equation*}
@@ -655,9 +667,9 @@ $P_i(q^{-s})=0$を満たす．これより．$|\alpha_{ij}|=q^{i/2}$となる複
 
 \begin{thm}
  $E/K$を$K$上定義された楕円曲線とする．この時，以下で定義する楕円曲線の間の射が存在する．
- \begin{equation}
+ \begin{equation*}
    [m]:E \to E, P \mapsto P + \dots +P
- \end{equation}
+ \end{equation*}
 \end{thm}
 \begin{proof}
  証明略．
@@ -681,14 +693,14 @@ Ker[$m$]を$E[m]$と書く．
 
 \begin{rem}
   $p =\mathrm{char}K$とする．この時，以下のどちらかが成り立つ．
-  \begin{eqnarray*}
-  E[p^e]={O} \\
-  E[p^e]=\mathbb{Z}/p^e \mathbb{Z}
-  \end{eqnarray*}
+  \begin{align*}
+  E[p^e]&={O} \\
+  E[p^e]&=\mathbb{Z}/p^e \mathbb{Z}
+\end{align*}
 つまり，標数と同じ素数上で考えるか，異なる素数上で考えるかで起きる現象が異なる.
 \end{rem}
 
-また，楕円曲線$E$にはガロア群$\mathrm{Gal}_{\overline{K}/K}$が作用しているが，その作用では，$O$を$O$に映し,$[m]$と可換なので，$E[m]$上に$G$の作用が定義できる．
+また，楕円曲線$E$にはガロア群$\mathrm{Gal}(\overline{K}/K)$が作用しているが，その作用では，$O$を$O$に映し,$[m]$と可換なので，$E[m]$上にガロア群の作用が定義できる．
 $E[m]$の逆極限を取る．それが楕円曲線のTate-Moduleである．
 
 \begin{dfn}
@@ -701,22 +713,22 @@ $\mathrm{char}(K)$と$l$が異なる時，
 $E[l^n] \simeq \mathbb{Z}/l^n \mathbb{Z} \times \mathbb{Z}/l^n \mathbb{Z} $
 より，$T_l(E)\simeq \mathbb{Z}_l \times \mathbb{Z}_l$となる．
 $E$の有理点全体を決定するのは難しいが，Tate Moduleは非常に簡単な形になっている．
-これは最も基本的なガロア表現である．
+これが最も基本的なガロア表現である．
 また，Isogeny$\phi:E \to E$に対し，$\phi_l:T_l(E) \to T_l(E)$が誘導される．
 これからさらに，以下が従う．
 \begin{thm}
   $E$を標数$p$の楕円曲線とする．
-  フロベニウス写像$\phi_q: E \to E,(x,y) \to (x^q,y^q)$に対し,$\phi_l: T_l(E) \to T_l(E)$が誘導され，以下が成り立つ．
-  \begin{align}
-   \mathrm{det}\phi_l  &= q \\
-   \#Ker(1 - \phi) &= \mathrm{det}(1 - \phi_l)
- \end{align}
+  フロベニウス写像$\phi^q: E \to E,(x,y) \to (x^q,y^q)$に対し,$\phi^q_l: T_l(E) \to T_l(E)$が誘導され，以下が成り立つ．
+  \begin{align*}
+   \mathrm{det}\phi^q_l  &= q \\
+   \#\mathrm{Ker}(m - n\phi^q) &= \mathrm{det}(m - n\phi^q_l) (p\mbox{は}m\mbox{を割らない})
+ \end{align*}
 \end{thm}
 \begin{proof}
  証明略．Weil Pairingと代数多様体でのFrobeniusの性質から証明する．
 \end{proof}
 \begin{rem}
- $\#E(\mathbb{F}_q)=\#Ker(1 - \phi)$となるので，上の式から有理点の個数が具体的に計算することができる．
+ $\#E(\mathbb{F}_q)=\#\mathrm{Ker}(1 - \phi^q)$となるので，上の式から有理点の個数がTate Moduleから計算できることがわかる．
 \end{rem}
 
 \section{楕円曲線のヴェイユ予想の証明}
@@ -735,22 +747,23 @@ $E$の有理点全体を決定するのは難しいが，Tate Moduleは非常に
   \end{equation*}
 \end{thm}
 \begin{proof}
- $\phi_l$の特性多項式$T^2 -\mathrm{Tr}\phi_l T+ \mathrm{det}\phi_l$の判別式が0以上になることを示す．
+ $\phi$をq乗のFrobenius写像．$\phi_l$をFrobeniusから誘導されるTate Moduleの間の準同型とする．
+ 有理点の個数は上の定理から$1 - \phi_l$が誘導する行列の行列式で計算できる．
+ $\phi_l$の特性多項式$\mathrm{det}(T - \phi_l)=T^2 -\mathrm{Tr}\phi_l T+ \mathrm{det}\phi_l$となるので，行列式は$1-\mathrm{Tr}\phi_l+ \mathrm{det}\phi_l$となる．また,特性多項式の判別式が0以上になることを示す．
  それは，上記の二次式に任意の実数を代入しても0以上になることが言えればよい.
  \begin{equation*}
   \mathrm{det}(\frac{n}{m} - \phi_l)=\frac{\mathrm{det}(n -m \phi_l)}{m^2}
   = \frac{\#\mathrm{ker}(n -m \phi_l)}{m^2} \ge 0
  \end{equation*}
 が成り立つ．
-$\mathbb{Q}$が$\mathbb{R}$上稠密なので，任意の実数を代入しても0以上になる．
-
+$\mathbb{Q}$が$\mathbb{R}$上稠密なので，任意の実数を代入しても0以上になる．($n$が$p$の倍数のときは上の等式は成り立たないが，$n/m$をうまく取り替えることにより正当化できる．)
 $\mathrm{det}\phi_l=q$より，$T^2 -\mathrm{Tr}\phi_l T+ \mathrm{det}\phi_l=0$の$\mathbb{C}$上の解を$\alpha,\beta$とすると，$\alpha \beta=q$であり，$\alpha,\beta$が複素共役になるので，$|\alpha|=|\beta|=\sqrt{q}$となる．
-
-また,$\phi_l$を代数閉体上まで拡張し，ジョルダン標準形を考えると，
-2行2列の行列で対角成分が$\alpha,\beta$となる.
-これより，$(\phi_l)^n$の特性多項式は，$1-(\alpha^n + \beta^n)T +q^nT^2.$となる．これより,
+$\phi_l$をの場合の結果を使って，$(\phi_l)^n$の場合に計算する．
+$\phi_l$を代数閉体上まで拡張し，ジョルダン標準形を考えると，
+2行2列の行列で対角成分が$\alpha,\beta$になり，n乗した行列の対角成分は$\alpha^n,\beta^n$となる．
+そのため，$(\phi_l)^n$の特性多項式は，$T^2-(\alpha^n + \beta^n)T +q^n$となる．これより,
 \begin{equation*}
-  E(\mathbb{F}_{q^n})=1-(\alpha^n + \beta^n) +q^n.
+  \#E(\mathbb{F}_{q^n})=\mathrm{det}(1- (\phi_l)^n)=1-(\alpha^n + \beta^n) +q^n.
 \end{equation*}
 
 $Z(E/\mathbb{F}_q;T)$を上の等式を用いて，計算する.
@@ -771,6 +784,63 @@ $Z(E/\mathbb{F}_q;T)$を上の等式を用いて，計算する.
 \end{align*}
 となる．
 \end{proof}
+\begin{rem}
+ $\mathbb{C}$上の楕円曲線は複素多様体として，1次元トーラスとなるので，
+ Betti数についての予想も成り立っていることがわかる．
+\end{rem}
+
+\section{Trace Fomulaとヴェイユ予想}
+\label{Trace Fomulaとヴェイユ予想}
+ヴェイユ予想とTrace Formulaとの関係を説明する．
+位相幾何でのLefschetz Trace Formulaは以下のようなものであった．
+\begin{thm}[Lefschetz Fixed Point Theorem]
+ $M$をコンパクト位相多様体,$\phi;M \to M$を連続写像とする．$Fix(\phi):=\{ x \in M |\phi (x)=x\}$とおく，$\phi$の固定点が高々有限で非退化で孤立的なら，
+ \begin{equation*}
+   \#Fix(\phi) = \sum(-1)^i \mathrm{Tr}(\phi^*| H^i(M))
+ \end{equation*}
+\end{thm}
+\begin{rem}
+ 詳しくないため誤りがある可能性あり．
+\end{rem}
+これは不動点に関する予想であった．ヴェイユ予想の証明でみたように，
+有理点はFrobenius写像の不動点と解釈できる．
+そこから，あるよい性質を満たすコホモロジーが存在し，以下が成り立つとする．
+\begin{thm}
+  $X$を体$\mathbb{F}_q$上の滑らかなd次元射影的代数多様体とし,Frobenius射$\phi: X \to X$ の固定点集合を$Fix(\phi)$とおく．
+このとき，
+\begin{equation*}
+  \#X(\mathbb{F}_{q^m})=\#Fix(\phi^m)= \sum_{i=0}^{2d}(-1)^i
+  \mathrm{Tr}((\phi^{*})^m;H^i(X \otimes_{\mathbb{F}_q} \overline{\mathbb{F}_q}, \mathbb{Q}_l))
+\end{equation*}
+がなりたつ．
+\end{thm}
+\begin{rem}
+ 詳しくないため誤っている可能性がある．また，Frobeniusでなくても有限体でなくても成り立つ．
+\end{rem}
+この時，$H^i(X \otimes_{\mathbb{F}_q} \overline{\mathbb{F}_q}, \mathbb{Q}_l))$のFrobenius射が誘導する作用の固有値を$\alpha_{i,1},\dots,\alpha_{i,k_i}$とすると
+\begin{equation*}
+　\#X(\mathbb{F}_{q^m})=\sum_{i=0}^{2d}(-1)^i(\alpha_{i,1}^m + \cdots + \alpha_{i,k_i}^m)
+\end{equation*}
+がなりたつ．また
+\begin{equation*}
+  P_i(T):=\mathrm{det}(1-T\phi^{*};H^i(X \otimes_{\mathbb{F}_q} \overline{\mathbb{F}_q}, \mathbb{Q}_l))=\prod(1-\alpha_{i,j}T)
+\end{equation*}
+とすると，
+\begin{equation*}
+ Z(X;T)=\prod_{i=0}^{2n}(P_i(T))^{{-1}^{i+1}}= \frac{P_1(T)P_3(T)\dots P_{2n-1}(T)}{P_0(T)\dots P_{2n}(T)}
+\end{equation*}
+となる．これより有理関数であることはすぐわかる．
+また，関数等式も実際に計算すればでる．
+Betti数についても，以下のような特異コホモロジーとの比較同型が存在すれば，丁寧に計算することで示せる．
+\begin{thm}[特異コホモロジーとの比較同型]
+$\mathbb{C}$上のスキーム$X$に対し,以下が成り立つ．
+\begin{equation*}
+ H^i(X,\mathbb{Q}_l) \simeq H^i(X(\mathbb{C}),\mathbb{Q})\otimes \mathbb{Q}_l
+\end{equation*}
+\end{thm}
+つまり，都合のよいコホモロジーが定義できれば，ヴェイユ予想のリーマン予想の類似以外の証明がほとんど自動的に示すことができる．
+グロタンディークはこうした都合のよい性質が成り立つエタールコホモロジーの定義に成功し，リーマン予想以外の部分の証明を行った．さらにモチーフに関するStandard予想という予想をたて，そこからリーマン予想部分も自動で成り立つことを示した．
+しかし，Standard予想自体は現在も未解決であり，ヴェイユ予想はドリーニュが別の方法で示したのである．
 
 \begin{thebibliography}{数字}
 %\begin{thebibliography}{数字}
@@ -778,12 +848,8 @@ $Z(E/\mathbb{F}_q;T)$を上の等式を用いて，計算する.
 %数字:開始の種類を表す．
 %bibitem:箇条書きのタイトルを表す．
 \bibitem{S} J.Silverman. The Arithmetic of Elliptic Curves. Springer-Verlag,1992
-参考文献の著者・名前など
-\bibitem{名前２}
-参考文献の著者・名前など
-・
-・
-・
+\bibitem{L} Q.Liu. Algebraic Varieties and Arithmetic Curves.oxford university press,2006
+\bibitem{H} H.Hida Sapporo Summer School on Number Theory Hokkaido University http://eprints3.math.sci.hokudai.ac.jp/1922/ ,2008
 \end{thebibliography}
 
 \end{document}
